tests/idris2/total011/expected
1/1: Building Issue1782 (Issue1782.idr)
Error: hack is not total, possibly not terminating due to recursive path Main.hack -> Main.hack

Issue1782:8:1--9:27
 8 | total
 9 | hack : Nat -> (Void, Void)

1/1: Building Issue1460 (Issue1460.idr)
Error: nonproductive is not total, possibly not terminating due to recursive path Main.nonproductive -> Main.nonproductive -> Main.nonproductive

Issue1460:3:1--3:43
 1 | %default total
 2 | 
 3 | nonproductive : Stream a -> (Stream a, ())
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

